--- a/public/pages/checkout.html
+++ b/public/pages/checkout.html
@@ -182,6 +182,8 @@
             <div class="login-header">
                 <i class="fas fa-check-circle" style="font-size: 3rem; color: var(--primary-color);"></i>
                 <h2>สรุปรายละเอียดการสั่งซื้อ</h2>
+                <button type="button" class="close-modal" onclick="closeOrderModal()"
+                    style="background:none; border:none; font-size:1.5rem; position:absolute; top:20px; right:20px; cursor:pointer;">&times;</button>
                 <p id="orderDateDisplay"></p>
             </div>
 
@@ -235,6 +237,8 @@
                 <button type="button" onclick="finalizeOrder()"
                     class="btn-primary full-width">แจ้งชำระเงินและเสร็จสิ้น</button>
             </form>
+            <button type="button" onclick="closeOrderModal()" style="margin-top: 10px; background: #ddd; color: #333;"
+                class="btn-primary full-width">ปิดหน้าต่าง</button>
         </div>
     </div>
 
@@ -385,6 +389,10 @@
             document.getElementById('orderDateDisplay').innerText = new Date().toLocaleDateString('th-TH');
             document.getElementById('orderModal').style.display = 'flex';
         });
+
+        function closeOrderModal() {
+            document.getElementById('orderModal').style.display = 'none';
+        }
 
         function previewSlip(input) {
             if (input.files && input.files[0]) {
